# Neural-Spike-Train-Analysis

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  dvc.yaml  mlruns.db  params.yaml  pyproject.toml
.dvc/: config
configs/: config.yaml
configs/model/: gru.yaml  lstm.yaml
configs/sorting/: default.yaml
configs/training/: default.yaml
docker/: Dockerfile.api  Dockerfile.train
docs/: MODEL.md  api.md  architecture.md
flows/: training_flow.py
flows/.github/workflows/: ci.yml
notebooks/: 01_spike_sorting_eda.ipynb  02_population_dynamics.ipynb  03_decoder_comparison.ipynb  04_uncertainty_analysis.ipynb
notebooks/artifacts/: loo_cv_results.json
src/api/: decoder.py  health.py  main.py  schemas.py  websocket.py
src/binning/: __init__.py  binner.py  smoother.py
src/models/: __init__.py  gru_decoder.py  losses.py  lstm_decoder.py  wiener.py
src/reduction/: __init__.py  explained.py  pca.py
src/sorting/: aligner.py  clusterer.py  detector.py  validator.py
src/training/: __init__.py  evaluate.py  loo_cv.py  metrics.py  register.py  train.py
src/uncertainty/: __init__.py  calibration.py  mc_dropout.py
tests/: conftest.py  test_binning.py  test_calibration.py  test_losses.py  test_mc_dropout.py  test_sorting.py
tests/integration/: test_api.py
tests/unit/: test_decoders.py  test_health_explained.py  test_pca_reduction.py  test_training_metrics.py  test_wiener_evaluate.py  text_fixtures.py
